	edje_text_class_set.
	* Text classes: Fixed edje_text_class_set to behave like
	edje_object_text_class_set (and as expected) wrt NULL fonts.

2012-07-12  Cedric Bail

	* Warn at compile time about forgotten image definition.
	* Stop compilation when clipping to a non RECT part.

2012-07-14  Cedric Bail

	* Fix Edje_Multisense shutdown.

2012-07-24  Carsten Haitzler (The Rasterman)

        * Fix edje entry to extend selection to char pos/word or line
        when holding shift + mouse click.

2012-07-29  Cedric Bail

	* Reduce potential reentrant issue when using edje_object_signal_emit.

2012-08-06  Cedric Bail

	* Call edje_object_message_signal_process also on GROUP part Edje object.

2012-08-07  Cedric Bail

	* Fix memory leak when Edje file have alias defined.

2012-08-09  Cedric Bail

	* Improve speed of color_class lookup by using an Eina_Hash.

2012-08-14  Hermet

	* Fix the uv mapping correctly in case of image swallowed.

2012-08-21  Guilherme Silveira

	* Fix password timeout with fixed point.

2012-08-24  Cedric Bail

	* Properly destroy color_class and text_class on an Edje_Object.

2012-08-27  Tom Hacohen (TAsn)

	* Textblock: Fixed issue with textblock fit not sizing correctly. This
	fix is not perfect.

2012-08-29  Cedric Bail

	* Don't leak memory on edje block error during signal emit.

2012-08-30  Carsten Haitzler (The Rasterman)

        1.7.0 release

2012-08-30  Cedric Bail

	* Check the number of parameter for image in edc.

2012-09-04  Cedric Bail

	* Report type of file when listing file used by an edc.

2012-09-04  Jihoon Kim (jihoon)

	* Add EDJE_INPUT_PANEL_RETURN_KEY_TYPE_SIGNIN.

2012-09-04  Aharon Hillel

	* Added nested parts support.
	This lets us do nested parts, e.g parts "{ part { part { } } }"

2012-09-05  ChunEon Park (Hermet)

	* if user change image size of the image object which is swallowed and
	it's map enabled by the edje, then edje needs to update it's uv mapping
  	info.
